fixxed css bug: file upload -> permission not readable

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -405,7 +405,8 @@ form {
 
 .content .inputForm .element .input input, .content .inputForm .element .input select {
     padding: 5px;
-    width: 100%;
+    width: auto;
+    min-width: 100%;
     box-sizing: border-box;
 }
 
